objects/ccrz__E_PrivateCache__c.object
<CustomObject>
    <description>Private caches hold cached data that is safe for external consumption.</description>
    <fields>
        <fullName>ccrz__BuildGroup__c</fullName>
        <description>Build Group is used to group caches that are built as part of the same process.  Caches are typically built from a batch job and the Batch Group provides a way to identify all caches built as part of the same batch.  For all caches built as part of the same job the Build Group should be the same.</description>
        <externalId>true</externalId>
        <label>Build Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuildTimestamp__c</fullName>
        <description>Build Timestamp provides a way to timestamp caches that are built as part of the same process.  Caches are typically built using a batch job and the Build Timestamp provides a way to note those caches built around the same time.  For all caches built as part of the same job the Build Timestamp should be the same.</description>
        <label>Build Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__CacheId__c</fullName>
        <description>External id used for data loading.</description>
        <externalId>true</externalId>
        <label>CacheId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CacheName__c</fullName>
        <description>The name or type of this cache.  In combination with storefront, locale, page name, and effective start this should form the unique identifier for a cache.</description>
        <externalId>true</externalId>
        <label>Cache Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <defaultValue>NOW() + 18250</defaultValue>
        <description>The date/time at which point this cache is no longer valid.</description>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The effective start date/time which this cache is visible.</description>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this cache entry enabled?</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Locale for this cache.  Null is considered the default locale, i.e. non-locale specific.</description>
        <externalId>true</externalId>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Pagename__c</fullName>
        <defaultValue>&apos;All&apos;</defaultValue>
        <description>The page that this cache specifically applies to.  Null or &apos;All&apos; is considered as the default applying to all pages.</description>
        <externalId>true</externalId>
        <label>Pagename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SequencePriority__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>SequencePriority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <defaultValue>&apos;global&apos;</defaultValue>
        <externalId>true</externalId>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Private Cache</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__CacheName__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>ccrz__Pagename__c</columns>
        <columns>ccrz__Locale__c</columns>
        <columns>ccrz__EffectiveStart__c</columns>
        <columns>ccrz__EffectiveEnd__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <columns>ccrz__SequencePriority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>CC Private Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Private Caches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>